Properly refresh ES indices before querying